# px-cli

./: .env.example  Cargo.toml  INSTALL_GUIDE.md  README.md  RELEASE_NOTES.md
.github/workflows/: ci.yml  release.yml
scripts/: install.ps1  install.sh
src/: app_registry.rs  cli.rs  config.rs  credentials.rs  main.rs  no_proxy.rs  path_utils.rs  process_scan.rs  shell.rs
src/commands/: alias.rs  check.rs  credentials.rs  discover.rs  edit.rs  init.rs  mod.rs  proxy.rs  ps.rs  register.rs  run.rs
